# docker_challenge

./: Dockerfile  docker-compose.yml  pyproject.toml
src/: app.py  main.py
