[project]
name = "docker-challenge"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohud Al-Bazzaz",email = "mohudalbazzaz@yahoo.co.uk"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "redis (>=7.1.0,<8.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
]

[tool.poetry]
packages = [{include = "docker_challenge", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
